dark mode fixes

--- a/style1.css
+++ b/style1.css
@@ -1,7 +1,7 @@
 body {
     margin:0;
 }
-.navbar{
+.navbar, .darkmode .navbar{
     overflow: hidden;
     background-color: black;
     position: fixed;
@@ -9,19 +9,20 @@ body {
     width: 100%;
     text-align: center;
 }
-.navbar a{
+.navbar a, .darkmode .navbar a{
     float: left;
     color: white;
     text-align: center;
     padding: 12px 14px;
     font-size: 16px;
 }
-.navbar a:hover {
+.navbar a:hover, .darkmode .navbar a:hover{
     text-decoration: underline;
     background-color: lightgray;
     color: black;
 }
-.navbar a.active{
+.navbar a.active, .darkmode .navbar a:active{
+    color: white;
     font-weight: bold;
     text-decoration: none;
 }
